[gd_scene load_steps=7 format=3 uid="uid://bo3jhj8dfwv20"]

[ext_resource type="Script" path="res://Scenes/player.gd" id="1_18n0n"]
[ext_resource type="Texture2D" uid="uid://d3gxmvn7jx4pl" path="res://Assets/bubble_placeholder.png" id="2_tnp6u"]
[ext_resource type="Shader" path="res://Scenes/hit.gdshader" id="3_6r4rn"]
[ext_resource type="Texture2D" uid="uid://2pe6wkqqvnhu" path="res://icon.svg" id="3_8pxej"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_u4ejo"]
size = Vector2(48, 48)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_b0xhk"]
shader = ExtResource("3_6r4rn")
shader_parameter/active = false

[node name="Player" type="CharacterBody2D" groups=["player"]]
script = ExtResource("1_18n0n")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_u4ejo")

[node name="shield_placeholder" type="Sprite2D" parent="."]
visible = false
modulate = Color(1, 1, 1, 0.392157)
position = Vector2(-1.90735e-06, 1.90735e-06)
scale = Vector2(10, 10)
texture = ExtResource("2_tnp6u")

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_b0xhk")
scale = Vector2(0.375, 0.375)
texture = ExtResource("3_8pxej")

[node name="InvincibleTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="timeout" from="InvincibleTimer" to="." method="_on_invincible_timer_timeout"]
